<resources>
    <string name="app_name">Bank Test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">User</string>
    <string name="login">Login</string>
    <string name="conta">Conta</string>
    <string name="recentes">Recentes</string>
    <string name="pagamento">Pagamento</string>
    <string name="date">10/01/2021</string>
    <string name="conta_de_luz">Conta de Luz</string>
    <string name="r_1_000_00">R$1.000,00</string>
    <string name="password">Password</string>
    <string name="logo_bank">Logo: Bank</string>
    <string name="error_invalid_username">E-mail ou CPF não cadastrados ou inválidos</string>
    <string name="error_invalid_password">A senha não atende os requisitos</string>
    <string name="saldo">Saldo</string>
</resources>